--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "@solana/wallet-adapter-react-ui": "^0.9.10",
     "@solana/web3.js": "^1.48.0",
     "@supabase/supabase-js": "^1.35.4",
+    "bs58": "^5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "^12.2.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.2.2",
     "@svgr/webpack": "^6.3.0",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
