--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bs58": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "next": "^12.2.2",
+    "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tweetnacl": "^1.0.3"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.2.2",
     "@svgr/webpack": "^6.3.0",
+    "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
