--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-next": "^12.2.2",
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.12",
     "tailwindcss": "^3.1.6",
     "typescript": "^4.7.4"
   }
