--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@solana/web3.js": "^1.48.0",
     "@supabase/supabase-js": "^1.35.4",
     "bs58": "^5.0.0",
+    "clsx": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
     "ky": "^0.31.1",
     "next": "^12.2.2",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@next/bundle-analyzer": "^12.2.2",
     "@svgr/webpack": "^6.3.0",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/cookie": "^0.5.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.6",
