--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
+    "@prisma/client": "4.1.0",
     "@solana/wallet-adapter-base": "^0.9.9",
     "@solana/wallet-adapter-phantom": "^0.9.7",
     "@solana/wallet-adapter-react": "^0.15.8",
@@ -24,6 +25,7 @@
     "nookies": "^2.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "swr": "^2.0.0-beta.6",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
@@ -41,7 +43,9 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.12",
+    "prisma": "^4.1.0",
     "tailwindcss": "^3.1.6",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
