--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma:prod:migrate": "dotenv -e .env.prod prisma migrate deploy"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
@@ -38,6 +39,7 @@
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.7",
+    "dotenv-cli": "^6.0.0",
     "eslint": "^8.20.0",
     "eslint-config-next": "^12.2.2",
     "postcss": "^8.4.14",
