--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@supabase/supabase-js": "^1.35.4",
     "bs58": "^5.0.0",
     "clsx": "^1.2.1",
-    "jsonwebtoken": "^8.5.1",
+    "jose": "^4.8.3",
     "ky": "^0.31.1",
     "next": "^12.2.2",
     "nookies": "^2.5.2",
@@ -34,7 +34,6 @@
     "@svgr/webpack": "^6.3.0",
     "@tailwindcss/forms": "^0.5.2",
     "@types/cookie": "^0.5.1",
-    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
