--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prisma:prod:migrate": "dotenv -e .env.prod prisma migrate deploy"
   },
   "dependencies": {
+    "@bonfida/spl-name-service": "^0.1.44",
     "@headlessui/react": "^1.6.6",
     "@prisma/client": "4.1.0",
     "@solana/wallet-adapter-base": "^0.9.9",
