--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@bonfida/spl-name-service": "^0.1.44",
     "@headlessui/react": "^1.6.6",
-    "@prisma/client": "4.1.0",
+    "@prisma/client": "^4.1.1",
     "@solana/wallet-adapter-base": "^0.9.9",
     "@solana/wallet-adapter-phantom": "^0.9.7",
     "@solana/wallet-adapter-react": "^0.15.8",
@@ -45,7 +45,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.1.0",
+    "prisma": "^4.1.1",
     "tailwindcss": "^3.1.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
