--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^1.35.4",
     "bs58": "^5.0.0",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.4",
     "jose": "^4.8.3",
     "ky": "^0.31.1",
     "next": "^12.2.3",
